Fix overflow issue

--- a/app/assets/stylesheets/overall.scss
+++ b/app/assets/stylesheets/overall.scss
@@ -29,6 +29,7 @@ body {
   border: solid 1px $light-line;
   margin-top: 30px;
   margin-bottom: 50px;
+  overflow: auto;
 }
 
 .index .info-area {
